--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,1 +1,97 @@
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>سياسة الخصوصية - Uqab</title>
+    <style>
+        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 20px; direction: rtl; background: #f9f9f9; color: #333; }
+        h1, h2 { color: #00529B; }
+        section { margin-bottom: 30px; }
+        hr { border: 1px solid #ddd; margin: 40px 0; }
+        .en { direction: ltr; text-align: left; font-size: 14px; color: #555; }
+    </style>
+</head>
+<body>
+
+<h1>سياسة الخصوصية</h1>
+
+<section>
+    <p>نحن في تطبيق <strong>Uqab</strong> نحترم خصوصيتك ونلتزم بحماية بياناتك الشخصية. تهدف هذه السياسة إلى توضيح كيفية جمع واستخدام وحماية معلوماتك عند استخدام التطبيق.</p>
+</section>
+
+<section>
+    <h2>المعلومات التي نجمعها</h2>
+    <ul>
+        <li>أذونات الرسائل القصيرة (SEND_SMS, READ_SMS): نستخدم هذه الأذونات لإرسال واستقبال رسائل الطوارئ بشكل مباشر عند الحاجة.</li>
+        <li>حالة الهاتف (READ_PHONE_STATE, READ_PHONE_NUMBERS): نستخدمها لمعرفة حالة الشريحة وتغييرها وإرسال تنبيهات أمنية.</li>
+        <li>الموقع (ACCESS_FINE_LOCATION, ACCESS_BACKGROUND_LOCATION): نستخدم الموقع لتحديد مكان الجهاز في حالات الطوارئ بدقة.</li>
+        <li>الأذونات الأخرى الضرورية لتشغيل التطبيق بشكل صحيح وأمني.</li>
+    </ul>
+</section>
+
+<section>
+    <h2>كيفية استخدام المعلومات</h2>
+    <p>نستخدم المعلومات فقط لأغراض التطبيق الأمنية، مثل إرسال تنبيهات الطوارئ، وعدم مشاركتها مع أي جهة خارجية بدون إذنك.</p>
+</section>
+
+<section>
+    <h2>حماية البيانات</h2>
+    <p>نلتزم باتخاذ إجراءات أمنية تقنية وإدارية لمنع الوصول غير المصرح به أو الكشف أو التعديل على بياناتك.</p>
+</section>
+
+<section>
+    <h2>حقوقك</h2>
+    <p>يمكنك طلب حذف بياناتك أو تعديلها في أي وقت من خلال التواصل معنا على البريد الإلكتروني أدناه.</p>
+</section>
+
+<section>
+    <h2>التواصل معنا</h2>
+    <p>لأي استفسار أو طلب يتعلق بالخصوصية، يرجى التواصل معنا عبر البريد الإلكتروني:</p>
+    <p><a href="mailto:ewman1978@gmail.com">ewman1978@gmail.com</a></p>
+</section>
+
+<hr />
+
+<div class="en">
+<h1>Privacy Policy</h1>
+
+<section>
+    <p>At <strong>Uqab</strong>, we respect your privacy and are committed to protecting your personal information. This policy explains how we collect, use, and safeguard your data when you use the app.</p>
+</section>
+
+<section>
+    <h2>Information We Collect</h2>
+    <ul>
+        <li>SMS Permissions (SEND_SMS, READ_SMS): Used to send and receive emergency messages directly when needed.</li>
+        <li>Phone State Permissions (READ_PHONE_STATE, READ_PHONE_NUMBERS): Used to detect SIM status and changes and send security alerts.</li>
+        <li>Location Permissions (ACCESS_FINE_LOCATION, ACCESS_BACKGROUND_LOCATION): Used to locate the device accurately during emergencies.</li>
+        <li>Other necessary permissions to operate the app securely and correctly.</li>
+    </ul>
+</section>
+
+<section>
+    <h2>How We Use Information</h2>
+    <p>We use information solely for the security purposes of the app, such as sending emergency alerts, and do not share it with any third parties without your consent.</p>
+</section>
+
+<section>
+    <h2>Data Protection</h2>
+    <p>We commit to implementing technical and administrative security measures to prevent unauthorized access, disclosure, or alteration of your data.</p>
+</section>
+
+<section>
+    <h2>Your Rights</h2>
+    <p>You can request to delete or modify your data at any time by contacting us at the email below.</p>
+</section>
+
+<section>
+    <h2>Contact Us</h2>
+    <p>For any privacy-related inquiries or requests, please contact us via email:</p>
+    <p><a href="mailto:ewman1978@gmail.com">ewman1978@gmail.com</a></p>
+</section>
+</div>
+
+</body>
+</html>
 privacy_policy.html
